# auv-vibhav

./: README.md
CV/: computah.py
bash-scripting/: finder.sh  hexa.txt  loops.sh  q4.txt  replace.sh  useless.sh
ros-chatter/: CMakeLists.txt  README.md  package.xml
ros-chatter/src/: chattera.cpp  chatterb.cpp  readera.cpp  readerb.cpp
